--- a/pages/index.html
+++ b/pages/index.html
@@ -44,21 +44,109 @@
         </div>
     </section>
 
-    <!-- Seção de Contato -->
-    <section id="contato" class="contato">
-        <h3>Fale Conosco</h3>
-        <p>Entre em contato para saber mais sobre nossos serviços e solicitar um orçamento.</p>
-        <form class="contato-form">
+    <!-- Seção de Depoimentos -->
+    <section id="depoimentos" class="depoimentos">
+        <h2>O que nossos clientes dizem</h2>
+        <div class="depoimento-container">
+            <div class="depoimento-item">
+                <p>"Calanguinhos Sites transformou a presença online do nosso negócio. Serviço incrível e suporte impecável!"</p>
+                <h4>- Maria Silva, Loja Regional</h4>
+            </div>
+            <div class="depoimento-item">
+                <p>"Excelente trabalho e muita dedicação em cada detalhe. Recomendo fortemente!"</p>
+                <h4>- João Ferreira, Restaurante Nordestino</h4>
+            </div>
+            <div class="depoimento-item">
+                <p>"Nosso site ficou mais rápido e profissional. A equipe é super atenciosa e cumpriu todos os prazos."</p>
+                <h4>- Ana Lima, Consultoria Tech</h4>
+            </div>
+        </div>
+    </section>
+
+    <!-- Seção de Perguntas Frequentes (FAQ) -->
+    <section id="faq" class="faq">
+        <h2>Perguntas Frequentes</h2>
+        <div class="faq-container">
+            <!-- Pergunta 1 -->
+            <div class="faq-item">
+                <button class="faq-question">O que está incluído no serviço de criação de sites? 
+                    <span class="toggle-icon">+</span>
+                </button>
+                <div class="faq-answer">
+                    <p>Nossos serviços incluem a criação de um site moderno e responsivo, otimização SEO básica, integração com redes sociais e treinamento para gerenciamento de conteúdo.</p>
+                </div>
+            </div>
+            <!-- Pergunta 2 -->
+            <div class="faq-item">
+                <button class="faq-question">Quanto tempo leva para desenvolver um site? 
+                    <span class="toggle-icon">+</span>
+                </button>
+                <div class="faq-answer">
+                    <p>O tempo de desenvolvimento varia conforme a complexidade do projeto, mas geralmente leva entre 2 a 4 semanas para um site padrão.</p>
+                </div>
+            </div>
+            <!-- Pergunta 3 -->
+            <div class="faq-item">
+                <button class="faq-question">Quais são as formas de pagamento aceitas? 
+                    <span class="toggle-icon">+</span>
+                </button>
+                <div class="faq-answer">
+                    <p>Aceitamos pagamento via transferência bancária, Pix e cartão de crédito. Também oferecemos opções de parcelamento para projetos maiores.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Seção de Galeria -->
+    <section id="galeria" class="galeria">
+        <h2>Nossos Projetos</h2>
+        <div class="galeria-container">
+            <div class="galeria-item">
+                <img src="imagens/projeto1.jpg" alt="Projeto 1">
+                <h4>Projeto 1</h4>
+                <p>Descrição do Projeto 1 com detalhes e tecnologias usadas.</p>
+            </div>
+            <div class="galeria-item">
+                <img src="imagens/projeto2.jpg" alt="Projeto 2">
+                <h4>Projeto 2</h4>
+                <p>Descrição do Projeto 2 com detalhes e tecnologias usadas.</p>
+            </div>
+            <div class="galeria-item">
+                <img src="imagens/projeto3.jpg" alt="Projeto 3">
+                <h4>Projeto 3</h4>
+                <p>Descrição do Projeto 3 com detalhes e tecnologias usadas.</p>
+            </div>
+        </div>
+    </section>
+    
+    <!-- Seção de Solicitação de Orçamento -->
+    <section id="orcamento" class="orcamento">
+        <h2>Solicite um Orçamento</h2>
+        <p>Preencha o formulário abaixo e entraremos em contato o mais breve possível.</p>
+        <form id="form-orcamento">
             <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome" required>
+            <input type="text" id="nome" name="nome" placeholder="Seu nome" required>
 
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" name="email" placeholder="Seu email" required>
+
+            <label for="tipo-servico">Tipo de Serviço:</label>
+            <select id="tipo-servico" name="tipo-servico" required>
+                <option value="">Selecione...</option>
+                <option value="site-institucional">Site Institucional</option>
+                <option value="portfolio-criativo">Portfólio Criativo</option>
+                <option value="loja-virtual">Loja Virtual</option>
+                <option value="outro">Outro</option>
+            </select>
+
+            <label for="orcamento">Orçamento Estimado:</label>
+            <input type="number" id="orcamento" name="orcamento" placeholder="Ex: 2000" required>
 
             <label for="mensagem">Mensagem:</label>
-            <textarea id="mensagem" name="mensagem" rows="4" required></textarea>
+            <textarea id="mensagem" name="mensagem" placeholder="Descreva os detalhes do seu projeto" required></textarea>
 
-            <button type="submit">Enviar</button>
+            <button type="submit">Enviar Solicitação</button>
+            <p id="status-orcamento"></p> <!-- Mensagem de status -->
         </form>
     </section>
 
@@ -66,5 +154,9 @@
     <footer class="footer">
         <p>&copy; 2024 Calanguinhos Sites. Todos os direitos reservados.</p>
     </footer>
+    
+    <script src="scripts.js"></script>
+
 </body>
+
 </html>
