--- a/pages/index.html
+++ b/pages/index.html
@@ -98,7 +98,7 @@
     </section>
 
     <!-- Seção de Galeria -->
-    <section id="galeria" class="galeria">
+    <section id="portfolio" class="portfolio">
         <h2>Nossos Projetos</h2>
         <div class="galeria-container">
             <div class="galeria-item">
@@ -120,7 +120,7 @@
     </section>
     
     <!-- Seção de Solicitação de Orçamento -->
-    <section id="orcamento" class="orcamento">
+    <section id="contato" class="contato">
         <h2>Solicite um Orçamento</h2>
         <p>Preencha o formulário abaixo e entraremos em contato o mais breve possível.</p>
         <form id="form-orcamento">
